--- a/src/pages/styles/adminPenghuni.css
+++ b/src/pages/styles/adminPenghuni.css
@@ -62,8 +62,8 @@ table
 }
 
 .table__penghuni table {
-    margin: 0%;
-    width: 100%;
+    margin: 0% auto;
+    width: 98%;
 }
 
 .table__penghuni th,
