--- a/src/pages/styles/Home.css
+++ b/src/pages/styles/Home.css
@@ -39,7 +39,7 @@
 
 .carousel-container {
     width: 100%;
-    max-width: 800px;
+    max-width: 600px;
     margin: auto;
 }
 
@@ -73,7 +73,7 @@ facility
     padding-top: 30px;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    gap: 50px;
+    gap: 80px;
     align-content: center;
 }
 
@@ -101,14 +101,15 @@ Benefit
 */
 .benefit__accordion {
     width: 100%;
+    max-width: 1500px; /* Set the desired maximum width */
+    margin: 0 auto; /* Center the accordion */
     box-shadow: 0 2px 6px 0 #333;
 }
 
 .benefit__accordion .accordion__item .accordion-header .accordion-button {
     background-color: #CEDEBD;
     color: #333;
-    font-size: 32px;
-
+    font-size: 30px;
 }
 
 .benefit__accordion .accordion__item .accordion-body {
@@ -119,7 +120,6 @@ Benefit
 
 .benefit__accordion .accordion-header {
     border-bottom: solid 3px #435334;
-
 }
 
 /*
@@ -139,7 +139,7 @@ Contact
 }
 
 .contact__subtitle {
-    font-size: 40px;
+    font-size: 38px;
 }
 
 .contact__button {
@@ -337,7 +337,7 @@ Contact
     }
 
     .contact__subtitle {
-        font-size: 20px;
+        font-size: 22px;
     }
 
     .contact__button a,
