--- a/src/pages/styles/adminPenghuni.css
+++ b/src/pages/styles/adminPenghuni.css
@@ -208,11 +208,19 @@ form
     }
 }
 
+@media screen and (max-width: 890px) {
+    .table__penghuni table {
+        font-size: 18px;
+    }
+
+}
+
 @media screen and (max-width: 767px) {
     .button-group{
         padding: 5px;
     }
 
+    
     .table__penghuni .aksi-button {
         font-size: 16px;
         padding: 8px 6px;
